Fix text vertical align middle on safari

--- a/src/components/company/company.scss
+++ b/src/components/company/company.scss
@@ -130,15 +130,23 @@
 				position: absolute;
 				top: 50%;
 				left: -3px;
-				-webkit-transform: translateY(-50%);
 				transform: translateY(-50%);
+				-webkit-transform: translateY(-50%);
+				-moz-transform: translateY(-50%);
+				-ms-transform: translateY(-50%);
+				-o-transform: translateY(-50%);
+				}
 				@extend .font-extra;
 				color: $color-bg;
 				@include breakpoint(mobile) {
 					position: relative;
 					top: auto;
 					left: auto;
-					-webkit-transform: translate(0);
+					transform: translateY(0);
+					-webkit-transform: translateY(0);
+					-moz-transform: translateY(0);
+					-ms-transform: translateY(0);
+					-o-transform: translateY(0);
 					transform: translate(0);
 					padding-bottom: 10px;
 				}
